@@ -27,7 +27,6 @@ from jhbuild.commands import Command, register_command
 from jhbuild.modtypes import MetaModule
 from jhbuild.modtypes.autotools import AutogenModule
 from jhbuild.modtypes.mozillamodule import MozillaModule
-from jhbuild.modtypes.tarball import Tarball
 from jhbuild.versioncontrol.cvs import CVSBranch
 from jhbuild.versioncontrol.svn import SubversionBranch
 from jhbuild.versioncontrol.arch import ArchBranch
@@ -57,17 +56,7 @@ class cmd_info(Command):
             self.show_info(module, packagedb, module_set)
 
     def show_info(self, module, packagedb, module_set):
-        if isinstance(module, MozillaModule):
-            installdate = packagedb.installdate(module.name,
-                                                module.get_revision() or '')
-        elif isinstance(module, AutogenModule):
-            installdate = packagedb.installdate(module.name,
-                                                module.branch.branchname or '')
-        elif isinstance(module, Tarball):
-            installdate = packagedb.installdate(module.name,
-                                                module.version or '')
-        else:
-            installdate = packagedb.installdate(module.name)
+        installdate = packagedb.installdate(module.name, module.get_revision() or '')
 
         print 'Name:', module.name
         print 'Type:', module.type
@@ -79,36 +68,30 @@ class cmd_info(Command):
             print 'Install-date:', 'not installed'
 
         if isinstance(module, MozillaModule):
-            print 'CVS-Root:', module.repository.cvsroot
-            if module.revision is not None:
-                print 'CVS-Revision:', module.revision
             if module.projects:
                 print 'Moz-Projects:', ', '.join(module.projects)
-        elif isinstance(module, AutogenModule):
-            if isinstance(module.branch, CVSBranch):
-                print 'CVS-Root:', module.branch.repository.cvsroot
-                print 'CVS-Module:', module.branch.module
-                if module.branch.revision:
-                    print 'CVS-Revision:', module.branch.revision
-            elif isinstance(module.branch, SubversionBranch):
-                print 'Subversion-Module:', module.branch.module
-            elif isinstance(module.branch, ArchBranch):
-                print 'Arch-Version:', module.branch.module
-            elif isinstance(module.branch, DarcsBranch):
-                print 'Darcs-Archive:', module.branch.module
-            elif isinstance(module.branch, GitBranch):
-                print 'Git-Module:', module.branch.module
-            elif isinstance(module.branch, TarballBranch):
-                print 'URL:', module.branch.module
-                print 'Version:', module.branch.version
-            try:
-                tree_id = module.branch.tree_id()
-                print 'Tree-ID:', tree_id
-            except NotImplementedError:
-                pass
-        elif isinstance(module, Tarball):
-            print 'URL:', module.source_url
-            print 'Version:', module.version
+
+        if isinstance(module.branch, CVSBranch):
+            print 'CVS-Root:', module.branch.repository.cvsroot
+            print 'CVS-Module:', module.branch.module
+            if module.branch.revision:
+                print 'CVS-Revision:', module.branch.revision
+        elif isinstance(module.branch, SubversionBranch):
+            print 'Subversion-Module:', module.branch.module
+        elif isinstance(module.branch, ArchBranch):
+            print 'Arch-Version:', module.branch.module
+        elif isinstance(module.branch, DarcsBranch):
+            print 'Darcs-Archive:', module.branch.module
+        elif isinstance(module.branch, GitBranch):
+            print 'Git-Module:', module.branch.module
+        elif isinstance(module.branch, TarballBranch):
+            print 'URL:', module.branch.module
+            print 'Version:', module.branch.version
+        try:
+            tree_id = module.branch.tree_id()
+            print 'Tree-ID:', tree_id
+        except NotImplementedError:
+            pass
 
         # dependencies
         if module.dependencies:
@@ -117,6 +100,8 @@ class cmd_info(Command):
                        if module.name in mod.dependencies ]
         if requiredby:
             print 'Required-by:', ', '.join(requiredby)
+        if module.suggests:
+            print 'Suggests:', ', '.join(module.suggests)
         if module.after:
             print 'After:', ', '.join(module.after)
         before = [ mod.name for mod in module_set.modules.values()
