@@ -1,5 +1,10 @@
 2008-01-21  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/info.py: fixed and updated info command.
+	(closes: #511009)
+
+2008-01-21  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/modtypes/waf.py, tests/tests.py: added checks for waf module
 	type.
 
